2009-01-06       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2spec.c:  introduced GM2_ROOT environment
	  variable which can override the --prefix option
	  given to configure.
	* gm2/gm2spec.c:  commented new functions.

2009-01-05       Gaius Mulley <gaius@gnu.org>

        * gm2/gm2-compiler/M2Base.mod:  IsComplesType includes
	  CType.
	* gm2/gm2-compiler/M2GenGCC.mod:  FoldUnary detects
	  whether a complex type constant is being used and
	  casts it to the CType.

2009-01-03       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Base.mod:  extended FindMetaType
	  to detect CType constants.  Extended assignment,
	  expression and parameter matrices to contain the
	  complex family of types.
	* testsuite/gm2/complex/pass/arith.mod and
          testsuite/gm2/complex/pass/arith2.mod new files.

2009-01-02       Gaius Mulley <gaius@gnu.org>

        * gm2/gccgm2.c:  added m2_complex_type_node,
	  m2_long_complex_type_node, m2_short_complex_node,
	  m2_c_type_node, m2_complex32_type_node,
	  m2_complex64_type_node,
	  m2_complex96_type_node,
          m2_complex128_type_node,
	  build_m2_complex32_type_node,
          build_m2_complex64_type_node,
	  build_m2_complex96_type_node,
	  build_m2_complex128_type_node,
	  gccgm2_GetM2Complex32,
          gccgm2_GetM2Complex64,
          gccgm2_GetM2Complex96,
          gccgm2_GetM2Complex128,
          build_m2_complex_type_node,
          build_m2_long_complex_type_node,
          build_m2_short_complex_type_node,
          build_m2_complex_type_from,
          gccgm2_GetM2ComplexType,
          gccgm2_GetM2LongComplexType,
          gccgm2_GetM2ShortComplexType,
          gccgm2_GetM2CType, gccgm2_BuildRe,
          gccgm2_BuildIm and gccgm2_BuildCmplx.
	* gm2/el/g-mode.el:  updated dates.
	* gm2/gm2-compiler/M2Base.def:  added Complex,
	  LongComplex, ShortComplex, IsAComplexType,
	  GetCmplxReturnType, ComplexToScalar and
	  ScalarToComplex.
	* gm2/gm2-compiler/M2Base.mod:  create and